--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gpa",
   "version": "0.1.0",
   "private": true,
-  "home": "https://anjantalatam.github.io/gpa",
+  "homepage": "https://anjantalatam.github.io/gpa",
   "dependencies": {
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
